--- a/templates/registration/change_password.html
+++ b/templates/registration/change_password.html
@@ -1,15 +1,16 @@
 {% extends "base_generic.html" %}
+{% load i18n %}
 
 {% block content%}
 {% if messages %}
 
     {% for message in messages %}
       {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-      <div class="w3-panel w3-pale-red w3-border w3-container w3-card-4 w3-center">
+      <div class="alert alert-danger">
         {{ message }}
       </div>
       {% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-      <div class="w3-panel w3-pale-green w3-border w3-container w3-card-4 w3-center">
+      <div class="alert alert-succes">
         {{ message }}
       </div>
       {% endif %}
@@ -20,6 +21,6 @@
 <form method="post">
   {% csrf_token %}
   {{ form.as_table }}
-  <button type="submit">Save changes</button>
+  <button type="submit">{% trans "Save changes"%}</button>
 </form>
 {% endblock %}
