--- a/pages/templates/about.html
+++ b/pages/templates/about.html
@@ -2,9 +2,11 @@
 {% load chunks %}
 {% load i18n %}
 
-{% block content %}
-  <h1>{% trans "About" %}</h1>
+{% block header %}
+<h1>{% trans "About" %}</h1>
+{% endblock %}
 
+{% block content %}
   {% get_chunk 'about_page' as about %}
   {% evaluate about.content %}
 
