--- a/pages/templates/on_site.html
+++ b/pages/templates/on_site.html
@@ -2,7 +2,10 @@
 {% load chunks %}
 {% load i18n %}
 
+{% block header %}
+<h1>{% trans "On Site" %}</h1>
+{% endblock %}
+
 {% block content %}
-  <h1>{% trans "On Site" %}</h1>
 
 {% endblock %}
