--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,34 +1,7 @@
-{% extends "base_generic.html" %}
-
-{% block content %}
-
-
-  {% if form.errors %}
-    <div class="w3-panel w3-pale-red w3-border w3-container w3-card-4 w3-center">
-      <p>Your username and password didn't match. Please try again.</p>
-    </div>
-  {% endif %}
-
-  {% if next %}
-    {% if user.is_authenticated %}
-      <div class="w3-panel w3-pale-red w3-border w3-container w3-card-4 w3-center">
-        <p>Your account doesn't have access to this page. To proceed,
-        please login with an account that has access.</p>
-      </div>
-    {% else %}
-      <div class="w3-panel w3-pale-red w3-border w3-container w3-card-4 w3-center">
-        <p>Please login to see this page.</p>
-      </div>
-    {% endif %}
-  {% endif %}
-
-
-<div class="w3-container w3-center">
+<!-- <div class="w3-container w3-center">
   <form method="post" action="{% url 'login' %}" class="w3-container w3-card-4">
   {% csrf_token %}
-    <div class="w3-container w3-theme">
-      <h2>Log In</h2>
-    </div>
+
 
     <div class="w3-section">
       <label>{{ form.username.label_tag }}</label>
@@ -50,7 +23,133 @@
     <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
   </div>
   </form>
-</div>
+</div> -->
+
+{% load static %}{% load i18n %}{% load widget_tweaks %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>{% block title %}{% trans "Salon ULM de Blois" %}{% endblock %}</title>
+
+  <!-- Custom fonts for this template-->
+  <link href="{% static 'vendor/fontawesome-free/css/all.min.css'%}" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
+  <!-- Custom styles for this template-->
+  <link rel="stylesheet" href="{% static 'css/sb-admin-2.min.css' %}">
+
+</head>
+
+<body class="bg-gradient-primary">
+
+  <div class="container">
+
+    <!-- Outer Row -->
+    <div class="row justify-content-center">
+
+      <div class="col-xl-10 col-lg-12 col-md-9">
+
+        <div class="card o-hidden border-0 shadow-lg my-5">
+          <div class="card-body p-0">
+            <!-- Nested Row within Card Body -->
+            <div class="row">
+              <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+              <div class="col-lg-6">
+                <div class="p-5">
+                  <div class="text-center">
+                    <h1 class="h4 text-gray-900 mb-4">{% trans "Welcome Back!" %}</h1>
+                  </div>
+
+                    <div class="class="alert alert-danger" role="alert">
+                      <ul>
+                      {% if form.errors %}
+                      <li>
+                        {% trans "Your username and password didn't match. Please try again." %}
+                      </li>
+                      {% endif %}
+
+                      {% if next %}
+                      <li>
+                        {% if user.is_authenticated %}
+                          {% trans "Your account doesn't have access to this page. To proceed, please login with an account that has access." %}
+                        {% else %}
+                            {% trans "Please login to see this page." %}
+                        {% endif %}
+                      </li>
+                      {% endif %}
+                  </ul>
+                </div>
 
 
-{% endblock %}
+                  <form method="post" class="user" action="{% url 'login' %}">
+                    {% csrf_token %}
+                    <div class="form-group">
+                      <input type="text"
+                       name="{{ form.username.name }}"
+                       id="{{ form.username.id_for_label }}"
+                       {% if form.username.value != None %}value="{{ form.username.value|stringformat:'s' }}"{% endif %}
+                       maxlength="{{ form.username.field.max_length }}"
+                       {% if form.username.field.required %}required{% endif %}
+                       class="form-control form-control-user"
+                       placeholder="{%trans "Username" %}"/>
+                      <!-- <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address..."> -->
+                    </div>
+                    <div class="form-group">
+                      <input type="password"
+                       name="{{ form.password.name }}"
+                       id="{{ form.password.id_for_label }}"
+                       {% if form.name.value != None %}value="{{ form.password.value|stringformat:'s' }}"{% endif %}
+                       maxlength="{{ form.password.field.max_length }}"
+                       {% if form.password.field.required %}required{% endif %}
+                       class="form-control form-control-user"
+                       placeholder="{%trans "Password" %}"/>
+                      <!-- <input type="password" class="form-control form-control-user" id="exampleInputPassword" > -->
+                    </div>
+                    <!-- <div class="form-group">
+                      <div class="custom-control custom-checkbox small">
+                        <input type="checkbox" class="custom-control-input" id="customCheck">
+                        <label class="custom-control-label" for="customCheck">Remember Me</label>
+                      </div>
+                    </div> -->
+                    <input type="submit" class="btn btn-primary btn-user btn-block" value="{% trans 'Login' %}"></input>
+                  </form>
+                  <hr>
+                  <div class="text-center">
+                    <a class="small" href="{% url 'password_reset' %}">{% trans "Forgot Password?" %}</a>
+                  </div>
+                  <div class="text-center">
+                    <a class="small" href="{% url 'signup' %}">{% trans "Create an Account!" %}</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+
+  <!-- Bootstrap core JavaScript-->
+  <script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
+  <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
+
+  <!-- Core plugin JavaScript-->
+  <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js'%}"></script>
+
+  <!-- Custom scripts for all pages-->
+  <script src="{% static 'js/sb-admin-2.min.js'%}"></script>
+
+</body>
+
+</html>
