--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,6 +1,11 @@
 {% extends "base_generic.html" %}
+{% load i18n %}
+
+{% block header %}
+<h1>{% trans 'Your password has been changed!'%}</h1>
+
+{% endblock %}
 
 {% block content %}
-  <h1>The password has been changed!</h1>
-  <p><a href="{% url 'login' %}">log in again?</a></p>
+  <p><a href="{% url 'login' %}">{% trans "log in again?"%}</a></p>
 {% endblock %}
