--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,6 +1,10 @@
 {% extends "base_generic.html" %}
 {% load i18n %}
 
+{% block header %}
+<h1>{% trans "Password Reset"%}</h1>
+{% endblock %}
+
 {% block content %}
   <form action="" method="post">
   {% csrf_token %}
