--- a/templates/includes/form.html
+++ b/templates/includes/form.html
@@ -1,6 +1,5 @@
 {% load widget_tweaks %}
 
-<div class="container">
 {% for hidden_field in form.hidden_fields %}
   {{ hidden_field }}
 {% endfor %}
@@ -20,17 +19,17 @@
 
     {% if form.is_bound %}
       {% if field.errors %}
-        {% render_field field class="form-control form-control-user is-invalid" %}
+        {% render_field field class="form-control is-invalid" %}
         {% for error in field.errors %}
           <div class="invalid-feedback">
             {{ error }}
           </div>
         {% endfor %}
       {% else %}
-        {% render_field field class="form-control form-control-user is-valid" %}
+        {% render_field field class="form-control is-valid" %}
       {% endif %}
     {% else %}
-      {% render_field field class="form-control form-control-user" %}
+      {% render_field field class="form-control" %}
     {% endif %}
 
     {% if field.help_text %}
@@ -42,4 +41,3 @@
 {% endfor %}
 
 {% endblock %}
-</div>
