--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -103,7 +103,7 @@
                      maxlength="{{ form.password2.field.max_length }}"
                      {% if form.password2.field.required %}required{% endif %}
                      class="form-control form-control-user"
-                     placeholder="{%trans "Password" %}"/>
+                     placeholder="{%trans "Repeat Password" %}"/>
                     <!-- <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Repeat Password"> -->
                   </div>
                 </div>
