--- a/templates/includes/logged_sidebar.html
+++ b/templates/includes/logged_sidebar.html
@@ -16,7 +16,7 @@
 
   <!-- Nav Item - Dashboard -->
   <li class="nav-item">
-    <a class="nav-link" href="{% url 'index' %}">
+    <a class="nav-link" href="{% url 'logged_index' %}">
       <i class="fas fa-fw fa-home"></i>
       <span>{% trans "Home" %}</span></a>
   </li>
