update reservation model + small html modifications

--- a/templates/base/base_logged.html
+++ b/templates/base/base_logged.html
@@ -87,7 +87,7 @@
         <div class="modal-body">{% trans 'Select "Logout" below if you are ready to end your current session.' %}</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">{% trans "Cancel" %}</button>
-          <a class="btn btn-primary" href="{% url 'logout'%}?next={{request.path}}">{% trans "Logout" %}</a>
+          <a class="btn btn-primary" href="{% url 'logout'%}">{% trans "Logout" %}</a>
         </div>
       </div>
     </div>
