--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -44,10 +44,10 @@
         {% else %}
         <!-- <ul class="navbar-nav ml-auto"> -->
         <li class="nav-item">
-          <a href="{% url 'login'%}?next={% url 'logged_index'%}"class="nav-link"><span class="fas fa-sign-in-alt"></span>{% trans "Login" %}</a>
+          <a href="{% url 'login'%}"class="nav-link"><span class="fas fa-sign-in-alt"></span>{% trans "Login" %}</a>
         </li>
         <li class="nav-item">
-          <a href="{% url 'signup'%}?next={{request.path}}" class="nav-link">{% trans "Sign Up" %}</a>
+          <a href="{% url 'signup'%}" class="nav-link">{% trans "Sign Up" %}</a>
 
         </li>
         </ul>
