update reservation form and form template

--- a/templates/base/base_logged_form.html
+++ b/templates/base/base_logged_form.html
@@ -27,7 +27,7 @@
       {% include 'form.html' with form=form %}
     {% endblock %}
 
-    <input type="submit" class="btn btn-success">{% trans "Submit" %}</input>
+    <input type="submit" class="btn btn-success" value="{% trans "Submit" %}"></input>
   </form>
 </div>
 
