--- a/meeting/templates/staff_reservation_validation.html
+++ b/meeting/templates/staff_reservation_validation.html
@@ -17,6 +17,11 @@
 <div class="alert alert-success" role="alert">
   {% trans 'This reservation as been validate on:'%} {{reservation.arrival}}
 </div>
+{% elif not reservation.is_on_time %}
+<div class="alert alert-danger" role="alert">
+  {{reservation.arrival_delay }}
+</div>
+
 {% endif%}
 
 {%  if reservation.is_missing_informations %}
@@ -24,6 +29,15 @@
   {% trans 'Some informations are missing in this reservation'%}
 </div>
 {% endif%}
+{% if not reservation.is_on_time %}
+<div class="alert alert-danger" role="alert">
+  {{reservation.arrival_delay }}
+</div>
+{% else %}
+<div class="alert alert-success" role="alert">
+  {{reservation.arrival_delay }}
+</div>
+{% endif %}
 
 <div class="card-deck">
 
