remove acces to static file in index.html

--- a/meeting/templates/index.html
+++ b/meeting/templates/index.html
@@ -10,7 +10,7 @@ From the {{ start }}, to the {{ end }}.
 {% endblocktrans  %}
 </p>
 <hr class="my-4">
-<a class="btn btn-primary btn-lg" href="{% static "files/Programme.pdf" %}" role="button">{% trans "Download Program"%}</a>
+<!-- <a class="btn btn-primary btn-lg" href="{% static "files/Programme.pdf" %}" role="button">{% trans "Download Program"%}</a> -->
 <!-- TODO Change Program file acces-->
 {% endblock %}
 
