--- a/meeting/templates/index.html
+++ b/meeting/templates/index.html
@@ -10,8 +10,7 @@ From the {{ start }}, to the {{ end }}.
 {% endblocktrans  %}
 </p>
 <hr class="my-4">
-<!-- <a class="btn btn-primary btn-lg" href="{% static "files/Programme.pdf" %}" role="button">{% trans "Download Program"%}</a> -->
-<!-- TODO Change Program file acces-->
+<!-- TODO Change Program file access-->
 {% endblock %}
 
 {% block content%}
