--- a/templates/includes/logged_sidebar.html
+++ b/templates/includes/logged_sidebar.html
@@ -37,7 +37,7 @@
         </a>
         <a class="collapse-item {% if url_name == 'staff_pilot_list' %}active{% endif %}" href="{% url 'staff_pilot_list'%}">
           <i class="fas fa-fw fa-search"></i>
-          <span>{% trans "Search pilot" %}</span>
+          <span>{% trans "Search Pilot" %}</span>
         </a>
         <div class="collapse-divider"></div>
         <h6 class="collapse-header">{% trans "Arrivals & Fuel:" %}</h6>
