--- a/meeting/templates/staff_pilot_list.html
+++ b/meeting/templates/staff_pilot_list.html
@@ -61,7 +61,7 @@
     <td>{{pilot.user.last_name}}</td>
     <td>{{pilot.insurance_company}}</td>
     <td>{{pilot.insurance_number}}</td>
-    <td>{{pilot.licence_file}}</td>
+    <td>{{pilot.licence_number}}</td>
     <td><a href="{% url 'pilot_overview' pilot.pk%}"><i class="fas fa-fw fa-search"></i></a></td>
   </tr>
   {% endfor %}
