--- a/meeting/templates/index.html
+++ b/meeting/templates/index.html
@@ -20,7 +20,7 @@ From the {{ start }}, to the {{ end }}.
   <div class="card h-100">
     <img class="card-img-top" src="http://placehold.it/500x325" alt="">
     <div class="card-body">
-      <h4 class="card-title">{% trans "ULM Pilot"%}</h4>
+      <h4 class="card-title">{% trans "Microlight pilot"%}</h4>
       <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
     </div>
     <div class="card-footer">
@@ -46,7 +46,7 @@ From the {{ start }}, to the {{ end }}.
   <div class="card h-100">
     <img class="card-img-top" src="http://placehold.it/500x325" alt="">
     <div class="card-body">
-      <h4 class="card-title">{% trans "Plane Pilot"%}</h4>
+      <h4 class="card-title">{% trans "PPL Pilot"%}</h4>
       <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
     </div>
     <div class="card-footer">
@@ -59,7 +59,7 @@ From the {{ start }}, to the {{ end }}.
   <div class="card h-100">
     <img class="card-img-top" src="http://placehold.it/500x325" alt="">
     <div class="card-body">
-      <h4 class="card-title">{% trans "Exponent"%}</h4>
+      <h4 class="card-title">{% trans "Exhibitor"%}</h4>
       <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
     </div>
     <div class="card-footer">
