--- a/meeting/templates/staff_reservation_validation.html
+++ b/meeting/templates/staff_reservation_validation.html
@@ -96,8 +96,8 @@
                 <td>{{reservation.esthetic_cup}}</td>
               </tr>
               <tr>
-                <th scope="row">{% trans 'To Sell' %}</th>
-                <td>{{reservation.to_sell}}</td>
+                <th scope="row">{% trans 'For Sale' %}</th>
+                <td>{{reservation.for_sale}}</td>
               </tr>
             </tbody>
           </table>
