--- a/meeting/templates/staff_reservation_list.html
+++ b/meeting/templates/staff_reservation_list.html
@@ -61,8 +61,8 @@
         {% render_field filter.form.esthetic_cup class="form-control" %}
     </div>
     <div class="form-group col-sm">
-        {{ filter.form.to_sell.label_tag }}
-        {% render_field filter.form.to_sell class="form-control" %}
+        {{ filter.form.for_sale.label_tag }}
+        {% render_field filter.form.for_sale class="form-control" %}
     </div>
   </div>
 
