--- a/meeting/templates/pilot_summary.html
+++ b/meeting/templates/pilot_summary.html
@@ -69,7 +69,7 @@
             <div class="list-group-item d-flex w-100 justify-content-between">
               <span>{{res.time_slot.meeting}}</span>
               <span>{{res}}</span>
-              <span class="fas fa-pen float-right">
+              <a href="{% url 'staff_update_reservation' pilot=pilot.pk pk=res.pk%}"><span class="fas fa-pen float-right"></span></a>
             </div>
           {% endfor %}
         {% endfor %}
