--- a/templates/emails/base_email.html
+++ b/templates/emails/base_email.html
@@ -1,11 +1,102 @@
-{% block header %}
-email header
-{% endblock %}
+{% load i18n %}
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <!-- <head></head> containing template style -->
+  {% include 'includes/base/html_head.html'%}
 
-{% block content %}
+  <body bgcolor="#E1E1E1" leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0">
+    <!-- CENTER THE EMAIL // -->
+		<!--
+		1.  The center tag should normally put all the
+			content in the middle of the email page.
+			I added "table-layout: fixed;" style to force
+			yahoomail which by default put the content left.
 
-{% endblock %}
+		2.  For hotmail and yahoomail, the contents of
+			the email starts from this center, so we try to
+			apply necessary styling e.g. background-color.
+		-->
+    <center style="background-color:#E1E1E1;">
+      	<table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable" style="table-layout: fixed;max-width:100% !important;width: 100% !important;min-width: 100% !important;">
+          <tr>
+            <td align="center" valign="top" id="bodyCell">
+              <!-- EMAIL HEADER // -->
+  						<!--
+  							The table "emailBody" is the email's container.
+  							Its width can be set to 100% for a color band
+  							that spans the width of the page.
+  						-->
+  						<table bgcolor="#E1E1E1" border="0" cellpadding="0" cellspacing="0" width="500" id="emailHeader">
 
-{% block footer %}
-email footer
-{% endblock %}
+  							<!-- HEADER ROW // -->
+  							<tr>
+  								<td align="center" valign="top">
+  									<!-- CENTERING TABLE // -->
+  									<table border="0" cellpadding="0" cellspacing="0" width="100%">
+  										<tr>
+  											<td align="center" valign="top">
+  												<!-- FLEXIBLE CONTAINER // -->
+  												<table border="0" cellpadding="10" cellspacing="0" width="500" class="flexibleContainer">
+  													<tr>
+  														<td valign="top" width="500" class="flexibleContainerCell">
+
+  															<!-- CONTENT TABLE // -->
+  															<table align="left" border="0" cellpadding="0" cellspacing="0" width="100%">
+  																<tr>
+  																	<!--
+  																		The "invisibleIntroduction" is the text used for short preview
+  																		of the email before the user opens it (50 characters max). Sometimes,
+  																		you do not want to show this message depending on your design but this
+  																		text is highly recommended.
+
+  																		You do not have to worry if it is hidden, the next <td> will automatically
+  																		center and apply to the width 100% and also shrink to 50% if the first <td>
+  																		is visible.
+  																	-->
+  																	<td align="left" valign="middle" id="invisibleIntroduction" class="flexibleContainerBox" style="display:none !important; mso-hide:all;">
+  																		<table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:100%;">
+  																			<tr>
+  																				<td align="left" class="textContent">
+  																					<div style="font-family:Helvetica,Arial,sans-serif;font-size:13px;color:#828282;text-align:center;line-height:120%;">
+  																						{% block hiddenDescription %}
+
+  																						{% endblock %}
+  																					</div>
+  																				</td>
+  																			</tr>
+  																		</table>
+  																	</td>
+  																	<td align="right" valign="middle" class="flexibleContainerBox">
+  																		<table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:100%;">
+  																			<tr>
+  																				<td align="left" class="textContent">
+  																					<!-- CONTENT // -->
+  																					<div style="font-family:Helvetica,Arial,sans-serif;font-size:13px;color:#828282;text-align:center;line-height:120%;">
+  																						{% trans 'This message is not display correctly?'%} <a href="#" target="_blank" style="text-decoration:none;border-bottom:1px solid #828282;color:#828282;"><span style="color:#828282;">{% trans 'View it in your browser' %}</span></a>.
+                                           </div>
+  																				</td>
+  																			</tr>
+  																		</table>
+  																	</td>
+  																</tr>
+  															</table>
+  														</td>
+  													</tr>
+  												</table>
+  												<!-- // FLEXIBLE CONTAINER -->
+  											</td>
+  										</tr>
+  									</table>
+  									<!-- // CENTERING TABLE -->
+  								</td>
+  							</tr>
+  							<!-- // END -->
+
+  						</table>
+  						<!-- // END -->
+            </td>
+          </tr>
+        </table>
+    </center>
+  </body>
+</html>
